# modern_cmake_examples

./: README.md
multi_no_external_deps/: CMakeLists.txt  README.md
multi_no_external_deps/include/math/add/: add.h
multi_no_external_deps/src/add/: CMakeLists.txt  add.cpp
multi_no_external_deps/src/mult/: CMakeLists.txt  mult.cpp
multi_no_external_deps/src/subtract/: CMakeLists.txt  subtract.cpp
multi_no_external_deps/test/: CMakeLists.txt  unit-add.cpp  unit-mult.cpp  unit-subtract.cpp
single_library_no_external_deps/: CMakeLists.txt  README.md
single_library_no_external_deps/include/math/: mult.h
single_library_no_external_deps/src/math/: add.cpp  mult.cpp  subtract.cpp
single_library_no_external_deps/test/: CMakeLists.txt  unit-add.cpp  unit-mult.cpp
single_library_with_external_deps/: CMakeLists.txt  README.md
single_library_with_external_deps/include/math/: subtract.h
single_library_with_external_deps/src/math/: subtract.cpp
single_library_with_external_deps/test/: unit-subtract.cpp
